test/scc/pp/errors/055.a
055.t:2:8: error: extra tokens at end of #endif directive